<resources>
    <string name="app_name">CS-Controller</string>

    <string name="hello">Hello</string>

    <string name="author">By XShe</string>

    <string name="info_f">关于权限以及其他事项的说明</string>

    <string name="first_info">
        CS-Controller(下称本应用)，用于辅助调控MoWei所开发的CS调度(下称调度)模块。
        \n由调度所使用的Apache2.0开源协议，本应用或包含一部分该模块源代码，在此特意声明(非必要)。
        \n同时，本应用也通过GPL-3协议开源，因此对于本应用的改版、引用以及任何使用本应用源码的行为，都应标明原作者及出处。
        \n项目开源地址:https://github.com/XSheeee/CS-Controller
        \n本应用目前申请使用了对于手机内部文件的读写权限以及root权限，分别用于改变调度配置以及获取顶层应用。
        \n使用本应用或许会导致你的手机出现无法启动、自动重启、黑屏、闪退、卡顿等bug，再次特意声明，可选择是否使用。
        \n本应用图标生成自阿里-通义，本人仅稍作修改，特此声明。
    </string>

    <string name="refuse">拒绝</string>
    <string name="accept">接受</string>
    <string name="search_idea">在此处搜索应用</string>
    <string name="search">在此处搜索\n</string>

    <string name="go_back"> <![CDATA[<—]]></string>

    <string name="select_mode">模式选择</string>

    <string name="app_list_title">APP单独配置</string>

    <string name="about_and_support">关于与捐赠</string>
    <string name="jz_MW">给魔威(CS调度作者，A0后台保活作者，FreezeitLambda等项目维护者)的捐赠</string>
    <string name="jz_XS">给XShe(CS调度管理器作者，IceFreezer(真的没被毙掉?),FreezeitLambda(真的还有关注?)等项目维护者)的捐赠</string>

    <string name="string_powersave_mode">省电模式</string>
    <string name="string_balance_mode">均衡模式</string>
    <string name="string_performance_mode">性能模式</string>
    <string name="string_fast_mode">极速模式</string>
    <string name="string_super_powersave_mode">超级省电</string>
    <string name="string_app_list_config">配置应用</string>

    <string name="about_mw_cpuspeedcontroller">CS调度</string>
    <string name="about_cs_ontroller">CS-Controller</string>
    <string name="cs_version">版本：</string>
    <string name="cs_work">运行状态：</string>
    <string name="now_mode">模式：</string>
    <string name="cs_work_true">工作中</string>
    <string name="cs_work_false">未运行</string>
    <string name="read_mode_error">读取配置时发生错误</string>
    <string name="read_version_error">"无法读取版本信息"</string>

    <string name="view_source_code">在 GitHub 查看源码</string>
    <string name="xshe_github">查看开发者的 GitHub 主页</string>
    <string name="cs_source_code">在 GitHub 查看源码</string>
    <string name="mowei_github">查看开发者的 GitHub 主页</string>
    <string name="url_xshe_source">https://github.com/XSheeee/CS-Controller</string>
    <string name="url_xshe_github">https://github.com/XSheeee</string>
    <string name="url_mowei_source" translatable="false">https://github.com/MoWei-2077/CPU-speed-controller</string>
    <string name="url_mowei_github">https://github.com/Mowei-2077</string>
    <string name="module_log">模块日志</string>
    <string name="settings">设置</string>
    <string name="root_warning">请授予ROOT权限</string>

    <string name="search_text">搜索应用名、包名</string>
    <string name="Disable_Detailed_Log">关闭切换模式日志</string>
    <string name="translation_load_error">err</string>
    <string name="accessibility_service_label">前台应用监控</string>
    <string name="accessibility_service_description">监控前台应用变化并显示包名</string>

    <string name="save_mode_error">保存配置时发生错误</string>
    <string name="error">ERROR</string>
    <string name="version_code">版本</string>
    <string name="title_activity_device_information">DeviceInformation</string>
    <string name="title_activity_device_info">DeviceInfo</string>
    <string name="android_version">Android版本</string>
    <string name="kernel_version">内核版本：</string>
    <string name="manufacturer">制造厂商：</string>
    <string name="device_code">设备代号：</string>
    <string name="device_info">设备信息</string>
    <string name="copy_device_info">复制信息</string>
    <string name="device_info_title">设备信息</string>
    <string name="device_manufacturer">设备制造商: </string>
    <string name="device_code_label">设备代号: </string>
    <string name="android_version_label">Android版本: </string>
    <string name="sdk_format">(SDK: %1$d)</string>
    <string name="kernel_version_label">内核版本: </string>
    <string name="soc_info_title">SoC Info</string>
    <string name="soc_code_label">SocCode: </string>
    <string name="hardware_label">HardWear: </string>
    <string name="policy_label">Policy: </string>
    <string name="io_info_title">I/O Info</string>
    <string name="scheduler_label">Scheduler: </string>
    <string name="clipboard_label">设备信息</string>
    <string name="copied_to_clipboard">设备信息已复制到剪贴板</string>
    <string name="copy_failed">复制失败</string>
    <string name="get_device_info_failed">获取失败</string>
</resources>